Fixed mobile spacing for intro section

--- a/src/components/landing/about/index.module.css
+++ b/src/components/landing/about/index.module.css
@@ -26,6 +26,7 @@
   #aboutContent {
     grid: auto-flow / 1fr;
     background: rgb(111,45,189);
+    padding-top: 20%;
    }
 
   #tech {
