--- a/src/components/landing/intro/index.module.css
+++ b/src/components/landing/intro/index.module.css
@@ -7,8 +7,8 @@
   .introContainer {
     width: 90%;
     margin: 0 auto;
-    margin-top: 20%;
-    height: 60vh;
+    margin-top: 50%;
+    height: 65vh;
   }
   .introContainer svg{
     display: none;
